Fixes mobile text alignment

--- a/CSS/home-styles.css
+++ b/CSS/home-styles.css
@@ -119,7 +119,7 @@ p {
 
   .background {
     height: auto;
-    top: 30%
+    top: 25%
   }
 
   nav {
@@ -135,7 +135,9 @@ p {
 
   #hero {
     margin: 0 5%;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .bg-mobile {
